build/log/idf_py_stdout_output_30994
Command: ninja flash
[1/11] Performing build step for 'bootloader'
[1/1] cd /Users/mliu/Desktop/Projects/Working/build/bootloader/esp-idf/esptool_py && /Users/mliu/.espressif/python_env/idf5.5_py3.9_env/bin/python /Users/mliu/esp/v5.5/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /Users/mliu/Desktop/Projects/Working/build/bootloader/bootloader.bin
Bootloader binary size 0x5260 bytes. 0x2da0 bytes (36%) free.
[2/11] No install step for 'bootloader'
[3/11] Completed 'bootloader'
[4/11] Building C object esp-idf/esp_simd/CMakeFiles/__idf_esp_simd.dir/src/vector/vector_basic_functions.c.obj
FAILED: esp-idf/esp_simd/CMakeFiles/__idf_esp_simd.dir/src/vector/vector_basic_functions.c.obj 
/Users/mliu/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/mliu/Desktop/Projects/Working/build/config -I/Users/mliu/Desktop/Projects/Working/components/esp_simd/include -I/Users/mliu/Desktop/Projects/Working/components/esp_simd/include/vector -I/Users/mliu/Desktop/Projects/Working/components/esp_simd/test -I/Users/mliu/esp/v5.5/esp-idf/components/newlib/platform_include -I/Users/mliu/esp/v5.5/esp-idf/components/freertos/config/include -I/Users/mliu/esp/v5.5/esp-idf/components/freertos/config/include/freertos -I/Users/mliu/esp/v5.5/esp-idf/components/freertos/config/xtensa/include -I/Users/mliu/esp/v5.5/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/mliu/esp/v5.5/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/mliu/esp/v5.5/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/mliu/esp/v5.5/esp-idf/components/freertos/esp_additions/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_hw_support/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_hw_support/include/soc -I/Users/mliu/esp/v5.5/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/Users/mliu/esp/v5.5/esp-idf/components/esp_hw_support/dma/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_hw_support/ldo/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_hw_support/debug_probe/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_hw_support/power_supply/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_hw_support/port/esp32s3/. -I/Users/mliu/esp/v5.5/esp-idf/components/esp_hw_support/port/esp32s3/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -I/Users/mliu/esp/v5.5/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -I/Users/mliu/esp/v5.5/esp-idf/components/heap/include -I/Users/mliu/esp/v5.5/esp-idf/components/heap/tlsf -I/Users/mliu/esp/v5.5/esp-idf/components/log/include -I/Users/mliu/esp/v5.5/esp-idf/components/soc/include -I/Users/mliu/esp/v5.5/esp-idf/components/soc/esp32s3 -I/Users/mliu/esp/v5.5/esp-idf/components/soc/esp32s3/include -I/Users/mliu/esp/v5.5/esp-idf/components/soc/esp32s3/register -I/Users/mliu/esp/v5.5/esp-idf/components/hal/platform_port/include -I/Users/mliu/esp/v5.5/esp-idf/components/hal/esp32s3/include -I/Users/mliu/esp/v5.5/esp-idf/components/hal/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_rom/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_rom/esp32s3/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -I/Users/mliu/esp/v5.5/esp-idf/components/esp_rom/esp32s3 -I/Users/mliu/esp/v5.5/esp-idf/components/esp_common/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_system/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_system/port/soc -I/Users/mliu/esp/v5.5/esp-idf/components/esp_system/port/include/private -I/Users/mliu/esp/v5.5/esp-idf/components/xtensa/esp32s3/include -I/Users/mliu/esp/v5.5/esp-idf/components/xtensa/include -I/Users/mliu/esp/v5.5/esp-idf/components/xtensa/deprecated_include -I/Users/mliu/esp/v5.5/esp-idf/components/driver/deprecated -I/Users/mliu/esp/v5.5/esp-idf/components/driver/i2c/include -I/Users/mliu/esp/v5.5/esp-idf/components/driver/touch_sensor/include -I/Users/mliu/esp/v5.5/esp-idf/components/driver/twai/include -I/Users/mliu/esp/v5.5/esp-idf/components/driver/touch_sensor/esp32s3/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_pm/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_ringbuf/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_driver_gpio/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_driver_pcnt/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_driver_gptimer/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_driver_spi/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_driver_mcpwm/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_driver_ana_cmpr/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_driver_i2s/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_driver_sdmmc/include -I/Users/mliu/esp/v5.5/esp-idf/components/sdmmc/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_driver_sdspi/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_driver_sdio/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_driver_dac/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_driver_rmt/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_driver_tsens/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_driver_sdm/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_driver_i2c/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_driver_uart/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_driver_ledc/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_driver_parlio/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_driver_usb_serial_jtag/include -I/Users/mliu/esp/v5.5/esp-idf/components/esp_driver_twai/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/mliu/Desktop/Projects/Working=. -fmacro-prefix-map=/Users/mliu/esp/v5.5/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/esp_simd/CMakeFiles/__idf_esp_simd.dir/src/vector/vector_basic_functions.c.obj -MF esp-idf/esp_simd/CMakeFiles/__idf_esp_simd.dir/src/vector/vector_basic_functions.c.obj.d -o esp-idf/esp_simd/CMakeFiles/__idf_esp_simd.dir/src/vector/vector_basic_functions.c.obj -c /Users/mliu/Desktop/Projects/Working/components/esp_simd/src/vector/vector_basic_functions.c
/Users/mliu/Desktop/Projects/Working/components/esp_simd/src/vector/vector_basic_functions.c: In function 'vec_fill_f32':
/Users/mliu/Desktop/Projects/Working/components/esp_simd/src/vector/vector_basic_functions.c:453:58: error: passing argument 2 of 'simd_fill_i32' from incompatible pointer type [-Wincompatible-pointer-types]
  453 |             return simd_fill_i32((int32_t*)(vec1->data), &val, vec1->size);
      |                                                          ^~~~
      |                                                          |
      |                                                          const float *
In file included from /Users/mliu/Desktop/Projects/Working/components/esp_simd/src/vector/vector_basic_functions.c:2:
/Users/mliu/Desktop/Projects/Working/components/esp_simd/src/vector/simd_functions.h:83:53: note: expected 'const int32_t *' {aka 'const long int *'} but argument is of type 'const float *'
   83 | extern int simd_fill_i32(int32_t *a, const int32_t *val, const size_t size);
      |                                      ~~~~~~~~~~~~~~~^~~
[5/11] Building C object esp-idf/esp_simd/CMakeFiles/__idf_esp_simd.dir/test/vector_basic_test.c.obj
ninja: build stopped: subcommand failed.
